Upgrade goutil to reuse hex tag to validate api data
